examples/test/testpolicy15659.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15659
  namespace: namespace39
spec:
  podSelector:
    matchLabels:
      key29: value41
      key46: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value44
          key33: value1
      podSelector:
        matchLabels:
          key35: value37
          key16: value10
          key19: value32
